; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_11232.c_fixup_ring0_shell.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_11232.c_fixup_ring0_shell.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [35 x i8] c"* GetVersion, unsupported version\0A\00", align 1
@EXIT_FAILURE = common dso_local global i32 0, align 4
@win32_fixup = common dso_local global i32* null, align 8
@winxp_ring0_shell = common dso_local global i32* null, align 8
@win2k3_ring0_shell = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i64, i32, i32*, i32, i32)* @fixup_ring0_shell to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @fixup_ring0_shell(i64 %0, i32 %1, i32* %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  store i64 %0, i64* %7, align 8
  store i32 %1, i32* %8, align 4
  store i32* %2, i32** %9, align 8
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  %15 = call i32 (...) @GetVersion()
  store i32 %15, i32* %12, align 4
  %16 = load i32, i32* %12, align 4
  %17 = call i32 @LOWORD(i32 %16)
  %18 = call i64 @LOBYTE(i32 %17)
  %19 = trunc i64 %18 to i32
  store i32 %19, i32* %13, align 4
  %20 = load i32, i32* %12, align 4
  %21 = call i32 @LOWORD(i32 %20)
  %22 = call i64 @HIBYTE(i32 %21)
  %23 = trunc i64 %22 to i32
  store i32 %23, i32* %14, align 4
  %24 = load i32, i32* %13, align 4
  %25 = icmp ne i32 %24, 5
  br i1 %25, label %26, label %31

26:                                               ; preds = %5
  %27 = load i32, i32* @stderr, align 4
  %28 = call i32 @fprintf(i32 %27, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0))
  %29 = load i32, i32* @EXIT_FAILURE, align 4
  %30 = call i32 @exit(i32 %29) #3
  unreachable

31:                                               ; preds = %5
  %32 = load i64, i64* %7, align 8
  %33 = trunc i64 %32 to i32
  %34 = load i32, i32* %11, align 4
  %35 = add nsw i32 %33, %34
  %36 = load i32*, i32** @win32_fixup, align 8
  %37 = getelementptr inbounds i32, i32* %36, i64 2
  store i32 %35, i32* %37, align 4
  %38 = load i64, i64* %7, align 8
  %39 = trunc i64 %38 to i32
  %40 = load i32, i32* %10, align 4
  %41 = add nsw i32 %39, %40
  %42 = load i32*, i32** @win32_fixup, align 8
  %43 = getelementptr inbounds i32, i32* %42, i64 7
  store i32 %41, i32* %43, align 4
  %44 = load i32, i32* %14, align 4
  switch i32 %44, label %57 [
    i32 1, label %45
    i32 2, label %51
  ]

45:                                               ; preds = %31
  %46 = load i32*, i32** %9, align 8
  store i32 7, i32* %46, align 4
  %47 = load i32, i32* %8, align 4
  %48 = load i32*, i32** @winxp_ring0_shell, align 8
  %49 = getelementptr inbounds i32, i32* %48, i64 55
  store i32 %47, i32* %49, align 4
  %50 = load i32*, i32** @winxp_ring0_shell, align 8
  store i32* %50, i32** %6, align 8
  br label %62

51:                                               ; preds = %31
  %52 = load i32*, i32** %9, align 8
  store i32 7, i32* %52, align 4
  %53 = load i32, i32* %8, align 4
  %54 = load i32*, i32** @win2k3_ring0_shell, align 8
  %55 = getelementptr inbounds i32, i32* %54, i64 58
  store i32 %53, i32* %55, align 4
  %56 = load i32*, i32** @win2k3_ring0_shell, align 8
  store i32* %56, i32** %6, align 8
  br label %62

57:                                               ; preds = %31
  %58 = load i32, i32* @stderr, align 4
  %59 = call i32 @fprintf(i32 %58, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0))
  %60 = load i32, i32* @EXIT_FAILURE, align 4
  %61 = call i32 @exit(i32 %60) #3
  unreachable

62:                                               ; preds = %51, %45
  %63 = load i32*, i32** %6, align 8
  ret i32* %63
}

declare dso_local i32 @GetVersion(...) #1

declare dso_local i64 @LOBYTE(i32) #1

declare dso_local i32 @LOWORD(i32) #1

declare dso_local i64 @HIBYTE(i32) #1

declare dso_local i32 @fprintf(i32, i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
